# echoanalysis-research

./: .flake8  .gitignore  Makefile  README.md  README.rst  run.py
echoanalysis-workflow/: pyproject.toml  setup.py
echoanalysis-workflow/src/workflow/: __init__.py  utils.py
echoanalysis-workflow/src/workflow/preprocessing/: __init__.py  _helpers.py  core.py  transforms.py  utils.py
echoanalysis-workflow/src/workflow/segmentation/: __init__.py  core.py  transforms.py  utils.py
echonet-workflow/: pyproject.toml
echonet-workflow/src/workflow/datasets/: dataset.py  toy.py
echonet-workflow/src/workflow/preprocessing/: core.py  helpers.py  utils.py
echonet-workflow/src/workflow/segmentation/: core.py
echonet-workflow/src/workflow/utils/: helpers.py
echonet-workflow/src/workflow/utils/preprocessing/: __init__.py  core.py  helpers.py
echonet-workflow/src/workflow/utils/segmentation/: __init__.py  core.py
scripts/: wolfe-gpu-train.sh
