[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow"
requires-python = ">=3.9.6"
dependencies = [
	"opencv-python",
	"torch>=2.0.0",
	"torchvision",
	"tqdm",
	"scipy",
	"scikit-image",
]
dynamic = [
	"version"
]

[project.optional-dependencies]
develop = [
	'ipykernel',
	'matplotlib',
	'flake8',
	'flake8-docstrings'
]

[tool.setuptools.packages.find]
where = [
	"src"
]

[tool.setuptools.dynamic]
version = {attr = "workflow.__version__"}