[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow"
version = "0.0.1"
requires-python = ">=3.9.6"
dependencies = [
	"opencv-python",
	"torch",
	"torchvision",
	"tqdm",
	"scipy",
	"scikit-image",
]

[tool.setuptools.packages.find]
where = ["src"]